makefile - add link to ../Widgets/FlyingFader.py
makefile - add link to ../Widgets/FlyingFader.py
panels.py - use above link, incorporate FlyingFaders.  some layout issues,
  nothing too borked
rsn.py - focus follows mouse so that FFaders get keystrokes

darcs-hash:20020707065332-13ce2-78a185c09d392642188ac4a322e61d6957d6ebfd.gz

--- a/light8/Makefile
+++ b/light8/Makefile
@@ -1,6 +1,7 @@
 LIB=/usr/local/lib
 
 go: parportmodule.so
+	ln -s ../Widgets/FlyingFader.py
 	sudo python pypar
 
 parportmodule.so: parport_wrap.c
