dmxserver and subcomposer work in new layout
darcs-hash:20050410191257-312f9-69746c10de7022caaaf938b0c100f271377a6dcd.gz

--- a/light9/io/Makefile
+++ b/light9/io/Makefile
@@ -1,11 +1,8 @@
 LIB=/usr/local/lib
-INC=-I/usr/local/include/python2.2
+INC=-I/usr/local/include/python2.3
 
-go: _parport.so FlyingFader.py _serport.so
+go: _parport.so _serport.so
 	result="your modules and links are now up to date"
-
-FlyingFader.py:
-	ln -s ../Widgets/FlyingFader.py
 
 _parport.so: parport_wrap.c
 	gcc -shared ${INC} parport_wrap.c parport.c -o _parport.so 
