attemted parport fixes on dash. i don't think these got used
darcs-hash:20060616165733-836b1-59d60524a33eede4b761c5896e2633aae1cc39f2.gz

--- a/light9/io/Makefile
+++ b/light9/io/Makefile
@@ -5,7 +5,7 @@ go: _parport.so _serport.so
 	result="your modules and links are now up to date"
 
 _parport.so: parport_wrap.c
-	gcc -shared ${INC} parport_wrap.c parport.c -o _parport.so 
+	gcc -shared -g ${INC} parport_wrap.c parport.c -o _parport.so 
 
 parport_wrap.c: parport.c parport.i
 	swig -python parport.i
