--- a/show/dance2011/makefile
+++ b/show/dance2011/makefile
@@ -1,2 +1,2 @@
 patch.n3: patch-source.n3 patch-rules.n3
-	  python2.5 `which cwm` patch-source.n3 --filter=patch-rules.n3 --n3=/ > patch.n3
+	  python2.6 /usr/local/bin/cwm patch-source.n3 --filter=patch-rules.n3 --n3=/ > patch.n3
