curvecalc refactor and module fixes
Ignore-this: afb03eba0af8d2daa7f03d4cace00d3e

darcs-hash:20120605213816-312f9-6fbe102aa2c0d7b09380a726bbf03e43f411aea6.gz

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,6 +11,7 @@ eggs = web.py==0.36
        cyclone==1.0-rc4
        rdflib==3.2.1
        restkit==4.1.2
+       Louie==1.1
 
 python = python
 interpreter = python
