new python console
Ignore-this: e6f8fa24c730e3cf8ed76be3fc1dcd01

darcs-hash:20120610094556-836b1-329e484791fcb858b0e2847bcabbd8b1fe526bdd.gz

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,7 +7,8 @@ download-cache = /tmp/
 
 [external_libs]
 recipe = zc.recipe.egg
-eggs = web.py==0.36
+eggs = ipython==0.8.4
+       web.py==0.36
        cyclone==1.0-rc4
        rdflib==3.2.1
        restkit==4.1.2
